--- a/src/pages/programs.astro
+++ b/src/pages/programs.astro
@@ -151,8 +151,8 @@ const upcomingWorkshops = [
           Want to participate in our programs or support our mission? There are many ways to get involved with Center Stage Outreach Team.
         </p>
         <div class="flex flex-wrap justify-center gap-4">
-          <a href="/about/members#join" class="bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-full transition duration-300">
-            Join Our Team
+          <a href="/request" class="bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-full transition duration-300">
+            Request a Show
           </a>
           <a href="/sponsors" class="border-2 border-white hover:bg-white hover:text-primary font-bold py-3 px-8 rounded-full transition duration-300">
             Become a Sponsor
